# english-tutor

./: .gitignore  GEMINI.md  README.md  diag_unix.py  diagnose_db.py  pyproject.toml  rxconfig.py  seed_curriculum.py  test_pglite.py
alembic/: env.py
alembic/versions/: 4a08a70ca027_remove_coherence_score_field.py  9160937471ef_add_comprehensive_evaluation_criteria.py  9800fe391036_.py  9df6e0f80afb_add_is_deleted_to_session.py  c7c0a043b2cb_add_tokenusage_model_for_detailed_.py  ddc25974eaa3_add_goals_and_pitfalls_to_curriculum.py  eaaf95ea96c9_add_title_to_session.py
english_tutor/: db_manager.py  english_tutor.py
english_tutor/agents/: audio_utils.py  base.py  orchestrator.py
english_tutor/models/: __init__.py  content.py  evaluation.py  seed.py  token_usage.py  user.py
english_tutor/prompts/: counselor.txt  evaluator.txt  placement.txt  planner.txt  progress.txt  tutor.txt
english_tutor/state/: admin_state.py  auth_state.py  chat_state.py
english_tutor/views/: admin.py  chat.py  components.py  dashboard.py  index.py  login.py
pgdata/: pglite_manager.js
pgdata_diag/: package-lock.json  package.json  pglite_manager.js
pgdata_test/: pglite_manager.js
